@@ -1,3 +1,8 @@
+2004-03-01  Michael Natterer  <mitch@gimp.org>
+
+	* gtk/gtktextbtree.c: removed underscores from calls to
+	gtk_text_btree_resolve_bidi().
+
 Mon Mar  1 10:41:27 2004  Owen Taylor  <otaylor@redhat.com>
 
 	Patch from Dov Grobgeld to implement auto-bidi-direction
